Fix missing font, paragraph spacing & copy

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 @import url('http://fonts.cdnfonts.com/css/gismonda-fg');
-@import url('http://fonts.cdnfonts.com/css/gruppo');
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -82,7 +82,7 @@ p {
 }
 
 p {
-	line-height: 1.5;
+	line-height: 1;
 }
 
 a {
